<resources>
    <string name="app_name">CS2SkinViewer</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="skin_image">Skin Image</string>
    <string name="skin_viewer_desc2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="skin_viewer_desc1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vestibulum leo non ornare imperdiet. Ut elementum posuere congue. Interdum et malesuada fames ac ante ipsum primis in faucibus.</string>
    <string name="skin_viewer_rarity">Lorem</string>
    <string name="skin_viewer_weapon">Lorem</string>
    <string name="skin_viewer_name">Lorem Ipsum</string>
    <string name="fr">FR</string>
    <string name="en">EN</string>
    <string name="notification_title_french">Mise à jour de la liste des skins</string>
    <string name="notification_content_french">La liste des skins a été mise à jour avec la catégorie %s, tapez ici pour découvrir un skin aléatoire.</string>
    <string name="notification_title_english">Updating the skin list</string>
    <string name="notification_content_english">The skin list has been updated with the %s category, tap here to discover a random skin.</string>
    <string name="more_button">More button</string>
    <string name="filters_french">Filtres</string>
    <string name="filters_english">Filters</string>
    <string name="rarity_french">Rareté :</string>
    <string name="rarity_english">Rarity :</string>
    <string name="name_french">Nom :</string>
    <string name="name_english">Name :</string>
    <string name="rotate_phone_french">Tournez votre appareil pour activer le mode plein écran.</string>
    <string name="rotate_phone_english">Rotate your device to enable fullscreen mode</string>
</resources>