<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#141225"
    tools:context=".SkinsListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/base_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:cardBackgroundColor="#141225"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background"
                app:layout_constraintBottom_toBottomOf="@+id/base_cardview"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.511"
                tools:layout_editor_absoluteX="-55dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/fixed_layout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:id="@+id/text_filters"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|start"
                        android:text="@string/filters_french" />

                    <ImageButton
                        android:id="@+id/arrow_button"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_background_lighter"
                        android:contentDescription="@string/more_button"
                        android:src="@drawable/baseline_expand_more_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="#141225" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/hidden_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/top_border"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fixed_layout">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center">

                                <TextView
                                    android:id="@+id/text_name"
                                    android:layout_width="50dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/name_french" />

                                <ImageButton
                                    android:id="@+id/name_sort_button"
                                    android:layout_width="35dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:background="@drawable/rounded_background_lighter"
                                    android:contentDescription="@string/more_button"
                                    android:src="@drawable/baseline_remove_24"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:tint="#141225" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:gravity="center">

                                <TextView
                                    android:id="@+id/text_rarity1"
                                    android:layout_width="50dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/rarity_french" />

                                <ImageButton
                                    android:id="@+id/rarity_sort_button"
                                    android:layout_width="35dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:background="@drawable/rounded_background_lighter"
                                    android:contentDescription="@string/more_button"
                                    android:src="@drawable/baseline_remove_24"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:tint="#141225" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/text_rarity2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/rarity_french" />

                            <Spinner
                                android:id="@+id/rarity_spinner"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_gravity="center" />
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/skins_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/base_cardview"
            tools:layout_editor_absoluteX="-3dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>